# wavcheck

./: .gitignore  README.md  pyproject.toml  screenshot.png.license  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
src/wavcheck/: __main__.py  check.py  data.py  fix.py  main.py  print.py  prompt.py  read.py  report.py  test_timecode.py  timecode.py  write.py
