# SPDX-FileCopyrightText: 2022 Barndollar Music, Ltd.
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = wavcheck
version = 0.9.0
author = Barndollar Music, Ltd.
author_email = eric@barndollarmusic.com
description = Check WAV files for Broadcast Wave Format issues
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/barndollarmusic/wavcheck
project_urls =
    Bug Tracker = https://github.com/barndollarmusic/wavcheck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wavcheck = wavcheck.main:cli
